configs/contour-private/templates/contour-private-netpol.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: contour-private
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: contour
      app.kubernetes.io/instance: contour-private
  egress:
    # Allow connections to the kubeapi
    - toEntities:
        - "kube-apiserver"
    # controller to proxy
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: contour
            app.kubernetes.io/instance: contour-private
  ingress:
    # Allow webhooks
    - fromEntities:
        - "kube-apiserver"
    # proxy to controller
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: contour
            app.kubernetes.io/instance: contour-private
    # Allow tailscale proxy to access contour
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: tailscale
            io.kubernetes.pod.namespace.labels.name: tailscale
      toPorts:
        - ports:
            - port: "443"
        - ports:
            - port: "80"
